fixed home overflow, explore background stretch

--- a/odyssey/src/components/VideoSection.css
+++ b/odyssey/src/components/VideoSection.css
@@ -28,6 +28,7 @@ video {
   align-items: center;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   object-fit: contain;
+  position: fixed;
 }
 
 .video-container > h1 {
@@ -40,8 +41,8 @@ video {
   color: white;
   font-size: 36px;
   margin-top: 8px;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial,
+    sans-serif;
 }
 
 .hero-btns {
